codepkg/objects/Excare__c.object
<CustomObject>
    <fields>
        <fullName>Description1__c</fullName>
        <label>Description1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description2__c</fullName>
        <label>Description2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Retailer_Code__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DO NOT IRON FUR TRIM</fullName>
                </value>
                <value>
                    <fullName>DO NOT IRON LACE</fullName>
                </value>
                <value>
                    <fullName>DO NOT IRON PRINT</fullName>
                </value>
                <value>
                    <fullName>DO NOT IRON TRIM</fullName>
                </value>
                <value>
                    <fullName>DO NOT IRON SHIRRING ELASTIC</fullName>
                </value>
                <value>
                    <fullName>FLUORESCENT COLOURS DESIGNED TO FADE</fullName>
                </value>
                <value>
                    <fullName>GENTLY EASE INTO SHAPE</fullName>
                </value>
                <value>
                    <fullName>IN LAUNDRY BAG</fullName>
                </value>
                <value>
                    <fullName>REMOVE BELT BEFORE WASHING</fullName>
                </value>
                <value>
                    <fullName>REMOVE DETACHABLE TRIMS BEFORE WASHING</fullName>
                </value>
                <value>
                    <fullName>REMOVE KNEE PADS BEFORE WASHING</fullName>
                </value>
                <value>
                    <fullName>WASH BEFORE WEAR</fullName>
                </value>
                <value>
                    <fullName>Wash deep colours separately</fullName>
                </value>
                <value>
                    <fullName>Reshape whilst damp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language_1__c</fullName>
        <label>Language-1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_2__c</fullName>
        <label>Language-2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_3__c</fullName>
        <label>Language-3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Directly after ironing instruction</fullName>
                </value>
                <value>
                    <fullName>Directly after washing instruction</fullName>
                </value>
                <value>
                    <fullName>Directly after &quot;WITH SIMILAR COLOURS&quot;</fullName>
                </value>
                <value>
                    <fullName>Top</fullName>
                </value>
                <value>
                    <fullName>Bottom</fullName>
                </value>
                <value>
                    <fullName>Directly after drying instructions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retailer_Code__c</fullName>
        <label>Retailer Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CareLabelRetailer</fullName>
                </value>
                <value>
                    <fullName>Cargo Retailer</fullName>
                </value>
                <value>
                    <fullName>CENTRIC BRANDS</fullName>
                </value>
                <value>
                    <fullName>DBA</fullName>
                </value>
                <value>
                    <fullName>DECATHLON</fullName>
                </value>
                <value>
                    <fullName>DemoRetail_Catalog</fullName>
                </value>
                <value>
                    <fullName>DemoRetail02</fullName>
                </value>
                <value>
                    <fullName>DEMO RETAILER</fullName>
                </value>
                <value>
                    <fullName>GAP</fullName>
                </value>
                <value>
                    <fullName>James_Test</fullName>
                </value>
                <value>
                    <fullName>JC PENNEY</fullName>
                </value>
                <value>
                    <fullName>John Retailer</fullName>
                </value>
                <value>
                    <fullName>KMART Australia</fullName>
                </value>
                <value>
                    <fullName>LA HALLE</fullName>
                </value>
                <value>
                    <fullName>LOLLYTOGS</fullName>
                </value>
                <value>
                    <fullName>MACY&apos;S</fullName>
                </value>
                <value>
                    <fullName>MACY&apos;S_Test</fullName>
                </value>
                <value>
                    <fullName>Peter</fullName>
                </value>
                <value>
                    <fullName>Reliance Trends</fullName>
                </value>
                <value>
                    <fullName>Shridhar Retailer</fullName>
                </value>
                <value>
                    <fullName>Shridhar Retailer Code</fullName>
                </value>
                <value>
                    <fullName>TU/ SAINSBURY</fullName>
                </value>
                <value>
                    <fullName>WE</fullName>
                </value>
                <value>
                    <fullName>William John</fullName>
                </value>
                <value>
                    <fullName>WINWIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retailer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retailer</label>
        <referenceTo>Retailer_Code__c</referenceTo>
        <relationshipLabel>ExCare Instructions</relationshipLabel>
        <relationshipName>ExCare_Instructions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ExCare Instruction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Description__c</columns>
        <columns>Language_1__c</columns>
        <columns>Language_2__c</columns>
        <columns>Language_3__c</columns>
        <columns>Language_4__c</columns>
        <columns>Language_5__c</columns>
        <columns>Position__c</columns>
        <columns>Retailer_Code__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Excare  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ExCare Instructions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>